compilers/ID/cool/regression/BASE_semanttest/loop_incorrect.cl.stderr
./BASE_semanttest/loop_incorrect.cl:2: Loop condition does not have type Bool.
./BASE_semanttest/loop_incorrect.cl:2: Inferred return type Object of method main does not conform to declared return type Int.
Compilation halted due to static semantic errors.
