compilers/ID/cool/regression/BASE_semanttest/loop_incorrect.cl
class Main is
    main() : Int is while 1 loop 1 pool end;
end;
